--- a/src/app/components/staff/received-covenant/received-covenant.component.css
+++ b/src/app/components/staff/received-covenant/received-covenant.component.css
@@ -284,3 +284,8 @@ background-color: #ffff; /* Your custom background color */
   width: 13rem;
   margin-left: 3%;
 }
+
+input{
+  text-align: right;
+  
+}
