--- a/src/app/components/workServeces/work-service-Reqs/work-serveces-reqs/work-serveces-reqs.component.html
+++ b/src/app/components/workServeces/work-service-Reqs/work-serveces-reqs/work-serveces-reqs.component.html
@@ -299,7 +299,7 @@
                                 <div class="form-group">
                                     <label for="field2 text-end"> المرجع
                                     </label>
-                                    <input type="text" id="field2" formControlName="field2" class="form-control"
+                                    <input type="text" id="field2"  class="form-control"
                                         placeholder="المرجع" />
                                 </div>
                             </div>
@@ -324,7 +324,7 @@
                                     <label for="field7 text-end" class="form-label">تاريخ اتمام الطلب 
                                     </label>
                                     <div class="input-group">
-                                        <input type="date" id="field7" formControlName="field7" class="form-control"
+                                        <input type="date" id="field7"  class="form-control"
                                       placeholder=" قم بكتابه التاريخ "/>
                                     </div>
                               </div>
