--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -23,15 +23,15 @@
 
 .nav-item a:hover {
   /* background-color: rgba(255, 255, 255, 0.1); Hover effect */
-  background-color: #f7fbff;
-  color: #224273;
-  border: 1px solid #f7fbff;
+  background-color: #4875a9;
+  color: #f1f4f8;
+  border: 1px solid #4875a9;
   border-radius: 10px;
 }
 .sub-item2 a:hover {
   /* background-color: rgba(255, 255, 255, 0.1); Hover effect */
   background-color: #f7fbff;
-  color: #224273;
+  color: #eaf1fa;
   border: 1px solid #f7fbff;
   border-radius: 10px;
 }
@@ -89,13 +89,12 @@ tr, th, tr {
     font-style: normal;
 
 }
-/* for sub-item2 */
+/* for sub-item2
 .sidebar .nav-collapse li a:hover .sub-item2,
 .sidebar[data-background-color=white] .nav-collapse li a:hover .sub-item2 {
-   /* opacity: 1 */
    color: #224273;
-}
-.sub-item2 a:hover, .sub-item2 a:active{
-  background-color: #f7fbff;
-  color: #224273;
-}
+} */
+/* .sub-item2 a:hover, .sub-item2 a:active{
+  background-color: #4875a9;
+  color: #f7fbff;
+} */
