--- a/src/app/components/projects-and-contracts/type-of-contracts/type-of-contracts.component.html
+++ b/src/app/components/projects-and-contracts/type-of-contracts/type-of-contracts.component.html
@@ -197,30 +197,59 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
+                        <tr *ngFor="let item of contractTypes">
                           <td></td>
   
-                          <td>Fiona Green</td>
-                          <td>Chief Operating Officer (COO)</td>
-                          <td>San Francisco</td>
-                          <td>San Francisco</td>
+                          <td>{{item.description}}</td>
+                          <td>{{item.colorId}}</td>
                           <td>48</td>
                           <td>2010/03/11</td>
-                          <td>$850,000</td>
+                          <td>{{item.localName}}</td>
+                          <td>{{item.name}}</td>
+                          <td class="firstcolright">
+                            <input type="checkbox" class="large-checkbox" />
+                          </td>
                         </tr>
-                        <tr>
-                          <td></td>
-  
-                          <td>Shou Itou</td>
-                          <td>Regional Marketing</td>
-                          <td>Tokyo</td>
-                          <td>San Francisco</td>
-                          <td>20</td>
-                          <td>2011/08/14</td>
-                          <td>$163,000</td>
-                        </tr>
+                        
                       </tbody>
                     </table>
+
+                      <!-- paging -->
+                  <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-end">
+                      <!-- Previous Button -->
+                      <li class="page-item" [class.disabled]="pageNumber === 1">
+                        <a class="page-link" href="#" (click)="changePage(pageNumber - 1)" tabindex="-1" [attr.aria-disabled]="pageNumber === 1 ? true : null">&laquo;</a>
+                      </li>
+                  
+                      <!-- Page Numbers -->
+                      <li class="page-item" [class.active]="pageNumber === 1">
+                        <a class="page-link" (click)="changePage(1)">1</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 2">
+                        <a class="page-link" (click)="changePage(2)">2</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 3">
+                        <a class="page-link" (click)="changePage(3)">3</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 4">
+                        <a class="page-link" (click)="changePage(4)">4</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 5">
+                        <a class="page-link" (click)="changePage(5)">5</a>
+                      </li>
+                  
+                      <!-- Ellipsis for more pages (can be enhanced later for large page sets) -->
+                      <li class="page-item"><a class="page-link">...</a></li>
+                  
+                      <!-- Next Button -->
+                      <li class="page-item">
+                        <a class="page-link" (click)="changePage(pageNumber + 1)">&raquo;</a>
+                      </li>
+                    </ul>
+                  </nav>
+
+
                   </div>
                 </div>
   
@@ -314,17 +343,17 @@
           </h5>
         </div>
         <div class="modal-body">
-            <form>
+            <form [formGroup]="contractTypeForm" (ngSubmit)="onSubmitAdd()">
                 <div class="container">
                   <!-- Row with two fields -->
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="field1 text-end"> اسم نوع العقد</label>
+                        <label for="name text-end"> اسم نوع العقد</label>
                         <input
                           type="text"
-                          id="field1"
-                          
+                          id="name"
+                          formControlName="name"
                           class="form-control custom-input"
                           placeholder="اسم نوع العقد باللغه المحليه"
                         />
@@ -332,11 +361,11 @@
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="field2 text-end">اسم القسم باللغه المحليه </label>
+                        <label for="localName text-end">اسم القسم باللغه المحليه </label>
                         <input
                           type="text"
-                          id="field2"
-                          
+                          id="localName"
+                          formControlName="localName"
                           class="form-control custom-input"
                           placeholder="section"
                         />
@@ -347,19 +376,20 @@
                   <div class="row ">
                     <div class="col-md-12">
                       <div class="form-group">
-                        <label for="floatingTextarea2">وصف نوع العقد </label>
+                        <label for="description">وصف نوع العقد </label>
       
                         <textarea
                           class="form-control custom-input"
                           placeholder="  وصف نوع المشروع"
-                          id="floatingTextarea2"
+                          id="description"
+                          formControlName="description"
                           style="height: 100px"
                         ></textarea>
                       </div>
                     </div>
                   </div>
       
-                  <div class="row mb-3">
+                  <!-- <div class="row mb-3">
                     <div class="col-md-12">
                       <div class="form-group">
                         <label for="field1 text-end">  اللون </label>
@@ -372,7 +402,7 @@
                       />
                       </div>
                     </div>
-                  </div>
+                  </div> -->
       
       
       
