--- a/src/app/components/projects-and-contracts/type-of-projects/type-of-projects.component.html
+++ b/src/app/components/projects-and-contracts/type-of-projects/type-of-projects.component.html
@@ -196,31 +196,59 @@
                           </th>
                         </tr>
                       </thead>
-                      <tbody **ngFor="let item of projectTypes">
-                        <tr>
+                      <tbody >
+                        <tr *ngFor="let item of projectTypes">
                           <td></td>
   
-                          <td>Fiona Green</td>
-                          <td>Chief Operating Officer (COO)</td>
-                          <td>San Francisco</td>
-                          <td>San Francisco</td>
+                          <td>{{item.description}}</td>
+                          <td>{{item.colorId}}</td>
                           <td>48</td>
                           <td>2010/03/11</td>
-                          <td>$850,000</td>
+                          <td>{{item.localName}}</td>
+                          <td>{{item.name}}</td>
+                          <td class="firstcolright">
+                            <input type="checkbox" class="large-checkbox" />
+                          </td>
                         </tr>
-                        <tr>
-                          <td></td>
-  
-                          <td>Shou Itou</td>
-                          <td>Regional Marketing</td>
-                          <td>Tokyo</td>
-                          <td>San Francisco</td>
-                          <td>20</td>
-                          <td>2011/08/14</td>
-                          <td>$163,000</td>
-                        </tr>
+                        
                       </tbody>
                     </table>
+
+                    <!-- paging -->
+                  <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-end">
+                      <!-- Previous Button -->
+                      <li class="page-item" [class.disabled]="pageNumber === 1">
+                        <a class="page-link" href="#" (click)="changePage(pageNumber - 1)" tabindex="-1" [attr.aria-disabled]="pageNumber === 1 ? true : null">&laquo;</a>
+                      </li>
+                  
+                      <!-- Page Numbers -->
+                      <li class="page-item" [class.active]="pageNumber === 1">
+                        <a class="page-link" (click)="changePage(1)">1</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 2">
+                        <a class="page-link" (click)="changePage(2)">2</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 3">
+                        <a class="page-link" (click)="changePage(3)">3</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 4">
+                        <a class="page-link" (click)="changePage(4)">4</a>
+                      </li>
+                      <li class="page-item" [class.active]="pageNumber === 5">
+                        <a class="page-link" (click)="changePage(5)">5</a>
+                      </li>
+                  
+                      <!-- Ellipsis for more pages (can be enhanced later for large page sets) -->
+                      <li class="page-item"><a class="page-link">...</a></li>
+                  
+                      <!-- Next Button -->
+                      <li class="page-item">
+                        <a class="page-link" (click)="changePage(pageNumber + 1)">&raquo;</a>
+                      </li>
+                    </ul>
+                  </nav>
+
                   </div>
                 </div>
   
@@ -314,7 +342,7 @@
           </h5>
         </div>
         <div class="modal-body">
-          <form>
+          <form [formGroup]="projectTypeForm" (ngSubmit)="onSubmitAdd()">
             <div class="container">
               <!-- Row with two fields -->
               <div class="row">
@@ -323,8 +351,8 @@
                     <label for="field1 text-end"> اسم نوع المشروع</label>
                     <input
                       type="text"
-                      id="field1"
-                                        class="form-control custom-input"
+                      id="name"
+                      formControlName="name" class="form-control custom-input"
                       placeholder="اسم نوع المشروع باللغه المحليه"
                     />
                   </div>
@@ -334,8 +362,8 @@
                     <label for="field2 text-end">اسم القسم باللغه المحليه </label>
                     <input
                       type="text"
-                      id="field2"
-                                        class="form-control custom-input"
+                      id="localName"
+                       formControlName="localName" class="form-control custom-input"
                       placeholder="section"
                     />
                   </div>
@@ -350,41 +378,40 @@
                     <textarea
                       class="form-control custom-input"
                       placeholder="  وصف نوع المشروع"
-                      id="floatingTextarea2"
+                      id="description"
+                      formControlName="description"
                       style="height: 100px"
                     ></textarea>
                   </div>
                 </div>
               </div>
   
-              <div class="row mb-3">
+              <!-- <div class="row mb-3">
                 <div class="col-md-12">
                   <div class="form-group">
                     <label for="field1 text-end">  اللون </label>
                     <input
                     type="text"
-                    id="field3"
-                                    class="form-control custom-input"
+                    id="colorId"
+                     formControlName="colorId"  class="form-control custom-input"
                     placeholder="اسم العهده"
                   />
                   </div>
                 </div>
-              </div>
+              </div> -->
   
   
   
           
   
-              <button type="button my-button3" class="btn my-button3">
-                <i class="fa-solid fa-plus"></i>اضافه</button>
-  
-              <button
-                type="button"
-                class="btn closebutton"
-                data-bs-dismiss="modal"
-              >
-                الغاء
-              </button>
+              <div class="col-md-6 mx-auto ">
+                <button type="submit" class="btn my-button3">
+                  اضافه
+                  <i class="fa-solid fa-plus"></i>
+                </button>
+                <button type="button" class="btn closebutton " data-bs-dismiss="modal">
+                  الغاء
+                </button></div>
             </div>
           </form>
         </div>
