--- a/src/app/components/staff/staff.component.html
+++ b/src/app/components/staff/staff.component.html
@@ -295,7 +295,7 @@
               </div>
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="location" class="form-label">مدير القسم</label>
+                  <label  class="form-label">مدير القسم</label>
                   <div class="input-group" >
                       <select class="form-select form-control" formControlName="departmentManagerId" >
                           <option value="" disabled selected>قم باختيار مدير القسم</option>
@@ -308,7 +308,7 @@
               </div>
               <div class="col-md-4">
                 <div class="form-group">
-                  <label for="location" class="form-label">القسم</label>
+                  <label class="form-label">القسم</label>
                   <div class="input-group" >
                       <select class="form-select form-control" formControlName="departmentId" >
                           <option value="" disabled selected>قم باختيار القسم</option>
