--- a/src/app/components/stock/storehouse/storage/storage.component.html
+++ b/src/app/components/stock/storehouse/storage/storage.component.html
@@ -74,7 +74,7 @@
                 <div
                   class="d-flex flex-row align-items-center mt-3 d-flex justify-content-between align-items-center flex-row-reverse"
                 >
-                  <div class="mb-2 me-2" style="width: 100px" [formGroup]="myForm">
+                  <div class="mb-2 me-2" style="width: 100px" >
                     <select
                       class="form-select"
                       aria-label="Default select example"
